# mezashi

./: README.md
.github/: copilot-instructions.md
.github/instructions/: mefront.instructions.md
.github/workflows/: copilot-setup-steps.yml
medetect/: .gitignore  README.md  pyproject.toml
medetect/notebooks/: Untitled-1.ipynb
mefront/: .gitignore  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
mefront/docs/: DRAG_AND_DROP.md
mefront/patches/: geotiff@3.0.3.patch
mefront/src/: App.tsx
mefront/src/components/: DetectionCanvas.tsx  DropZone.tsx  LoadingSpinner.tsx  ResultPanel.tsx
mefront/src/lib/: exportResults.ts  geotiff.ts  imageUtils.ts  inference.ts  labels.ts  obbUtils.ts  types.ts
mefront/src/lib/__tests__/: exportResults.test.ts  geotiff-parse.test.ts  geotiff.test.ts  labels.test.ts  obbUtils.test.ts
